--- a/views/siker.ejs
+++ b/views/siker.ejs
@@ -12,5 +12,8 @@
         <p>Összes foglalás: <%= ordersCount %></p>
         <a href="/order" class="btn btn-primary">Új foglalás</a>
     </div>
+    <div class="byelogo">
+        <img src="/logo2.jpg" style="display: block; margin: auto";>
+    </div>
 </body>
 </html>
